changing the logo

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/starlight": "^0.25.4",
     "@astrojs/starlight-tailwind": "^2.0.3",
@@ -21,6 +22,8 @@
     "@preline/dropdown": "^2.4.1",
     "@preline/overlay": "^2.4.1",
     "@preline/tabs": "^2.4.1",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "@vercel/nft": "^0.27.3",
     "astro": "^4.14.2",
     "astro-compressor": "^0.4.1",
@@ -29,7 +32,10 @@
     "gsap": "^3.12.5",
     "html-minifier-terser": "^7.2.0",
     "lenis": "^1.1.9",
+    "nodemailer": "^6.9.15",
     "preline": "^2.4.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rimraf": "^6.0.1",
     "sharp": "^0.33.5",
     "sharp-ico": "^0.1.5",
