--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,14 +1,10 @@
 name: Deploy to GitHub Pages
 
 on:
-  # Trigger the workflow every time you push to the `main` branch
-  # Using a different branch name? Replace `main` with your branch’s name
   push:
     branches: [ main ]
-  # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
-# Allow this job to clone the repo and create a page deployment
 permissions:
   contents: read
   pages: write
@@ -18,14 +14,28 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout your repository using git
+      - name: Checkout your repository
         uses: actions/checkout@v4
-      - name: Install, build, and upload your site
-        uses: withastro/action@v2
-        #with:
-          #path: . # The root location of your Astro project inside the repository. (optional)
-          # node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 20. (optional)
-          # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+      
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build the site for Vercel output
+        run: |
+          # Set the VERCEL environment variable
+          export VERCEL=true
+          npm run build
+        env:
+          VERCEL: true # Ensure Vercel build output is generated
+
+      - name: Verify Vercel build output
+        run: ls -la .vercel/output # Ensure the `.vercel/output` folder is generated
+
+      - name: Upload build output
+        uses: actions/upload-artifact@v3
+        with:
+          name: vercel-output
+          path: .vercel/output # Upload the `.vercel/output` folder
 
   deploy:
     needs: build
@@ -34,9 +44,13 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+      - name: Download build output
+        uses: actions/download-artifact@v3
+        with:
+          name: vercel-output
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
-
-        
+        with:
+          folder: .vercel/output/static # Deploy the `static` content inside `.vercel/output`
